# panduza-adapters-sdk

./: CMakeLists.txt  Dockerfile  README.md  build.sh  panduza_sdk_init.cmake
.github/workflows/: build-pza-pico-modbus-dio.yml
drivers/: CMakeLists.txt
drivers/panduza_dio/: CMakeLists.txt  dio.c
drivers/panduza_dio/inc/panduza/: dio.h
drivers/panduza_i2c/: CMakeLists.txt  i2c.c
drivers/panduza_i2c/inc/panduza/: i2c.h
drivers/panduza_spi/: CMakeLists.txt  panduza_spi.c
drivers/panduza_spi/inc/panduza/: spi.h
drivers/panduza_uart/: CMakeLists.txt  uart.c
drivers/panduza_uart/inc/panduza/: uart.h
examples/pza-pico-modbus-dio/: CMakeLists.txt
examples/pza-pico-modbus-dio/src/: main.c
examples/pza-pico-modbus-dio/test/: README.md
examples/pza-pico-modbus-dio/test/rsc/: test_env.resource
examples/pza-pico-modbus-dio/test/rsc/envs/: bench.py
examples/pza-pico-modbus-dio/test/rsc/libs/: GPIOLibrary.py  ModbusLibrary.py
examples/pza-pico-modbus-dio/test/tests/: Test_Cases.robot
examples/pza-pico-modbus-i2c/: CMakeLists.txt
examples/pza-pico-modbus-i2c/src/: main.c
interfaces/: CMakeLists.txt
interfaces/inc/panduza/: interface.h
interfaces/inc/panduza/interface/: interface_dio.h  interface_i2c.h  interface_uart.h
interfaces/modbus/: CMakeLists.txt  modbus.c
platform/: CMakeLists.txt  panduza_platform.cmake
platform/inc/panduza/: platform.h
platform/inc/panduza/platform/: platform_dio.h  platform_i2c.h  platform_modbus.h  platform_spi.h  platform_uart.h
platform/pico/: CMakeLists.txt  dio.c  i2c.c  modbus.c  platform.c  platform.cmake  spi.c  uart.c  usb_descriptors.c
platform/pico/inc/: pico_tusb_config.h
platform/toolchain/: arm-gcc.cmake
